fixed page overflow

--- a/src/Pages/Destination/Destination.module.css
+++ b/src/Pages/Destination/Destination.module.css
@@ -4,6 +4,8 @@
   background-size: cover;
   background-position: center;
   min-height: 100vh;
+  width: 100vw;
+  overflow: hidden;
   /* display: flex;
   justify-content: center;
   align-items: center; */
