--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,6 @@ body {
   color: var(--white);
   height: 100vh;
   background-color: var(--dark-blue);
-  overflow-x: hidden;
 }
 
 ul {
